phpipam-galera/phpipam-cron-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-cron
  labels:
    app: phpipam
spec:
  selector:
    matchLabels:
      app: phpipam
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpipam
    spec:
      containers:
      - image: phpipam/phpipam-cron:latest
        name: phpipam-cron
