phpipam-galera/phpipam-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpipam
  labels:
    app: phpipam
spec:
  ports:
    - port: 80
  selector:
    app: phpipam
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam
  labels:
    app: phpipam
spec:
  selector:
    matchLabels:
      app: phpipam
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpipam
        tier: frontend
    spec:
      containers:
      - image: phpipam/phpipam-www:latest
        name: phpipam
        ports:
        - containerPort: 80
          name: phpipam
        volumeMounts:
        - name: phpipam-persistent-storage
          mountPath: /phpipam/css/images/logo
      volumes:
      - name: phpipam-persistent-storage
        persistentVolumeClaim:
          claimName: phpipam-pv-claim
